Koolshare Asuswrt-Merlin USB2JFFS Changelog
===========================================
1.6 
   - add	添加arm384机型支持。（需要arm384的1.0.4版本软件中心支持）
   - update	根据反馈，将插件使用条件：读30MB/s，写50MB/s改为读20MB/s，写35MB/s

1.5
   - fix	修复读取速度和写入速度判断相反的问题。

1.4
   - fix	修复开机自启无法加载定时同步任务的问题。

1.3
   - fix	修复有的时候无法识别U盘的问题。

1.2
   - fix	修复86U使用的问题。

1.1
   - update	一点小改动

1.0
   - add	添加USB2JFFS插件，轻松用U盘挂载系统JFFS分区。
   		更新信息见插件帮助标签页！