@@ -221,11 +221,11 @@
             "version": "2.0"
         }, 
         {
-            "build_date": "2020-04-03_15:49:38", 
+            "build_date": "2020-04-05_21:28:57", 
             "changelog": "", 
             "description": "轻松用U盘挂载jffs", 
             "home_url": "Module_usb2jffs.asp", 
-            "md5": "2aad1256eae7a542edd0d0e52b744bcb", 
+            "md5": "f836b10804652929bf3b9327d97fed3d", 
             "name": "usb2jffs", 
             "tar_url": "usb2jffs/usb2jffs.tar.gz", 
             "title": "USB2JFFS", 
